ADD dockerising the vital info app collector into Docker image.